fixing draggables still need to solve weird sortable jump bug

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,7 +7,7 @@ body {
 	padding: 0;
 	font-family: 'Source Sans Pro', arial;
 	font-size: 14px;
-	color: #222;
+	color: #31353C;
 	background-color: #e8ebed;
 	overflow-y: scroll;
 	-webkit-touch-callout: none;
@@ -663,8 +663,30 @@ button.log-toggle {
 	font-size: 13px;
 }
 
+.preview-box {
+  display: -webkit-box;   /* OLD: Safari,  iOS, Android browser, older WebKit browsers.  */
+  display: -moz-box;      /* OLD: Firefox (buggy) */
+  display: -ms-flexbox;   /* MID: IE 10 */
+  display: -webkit-flex;  /* NEW, Chrome 21+ */
+  display: flex;          /* NEW: Opera 12.1, Firefox 22+ */
+
+  -webkit-box-align: center; -moz-box-align: center; /* OLD… */
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+
+  -webkit-box-pack: center; -moz-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  height: 68px;
+  width: 100%;
+}
+
 .preview {
-	padding: 10px 0px;
+	height: 90px;
+	position: relative;
+	border-bottom: 1px solid #212429;
 }
 
 .button-preview {
@@ -679,10 +701,8 @@ button.log-toggle {
 }
 
 .draggable {
-	height: 90px;
 	cursor: move;
-	position: relative;
-	border-bottom: 1px solid #212429;
+	z-index: 99;
 }
 
 .draggable:hover{
@@ -691,7 +711,6 @@ button.log-toggle {
 
 .im-flying {
   box-shadow: 0px 3px 8px rgba(0,0,0,.3);
-  background: #EEE !important;
 }
 
 .component-description {
